--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,13 @@
 #divider{
   width:10px;
 }
+.card-header{
+  font-size: 20px;
+  text-align: center;
+}
+img{
+  min-width: 150px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
